Fix misaligned prompt container section

--- a/style.css
+++ b/style.css
@@ -54,10 +54,12 @@ a {
 
 button {
     background-color: #3882f6;
-    border-radius: 4px;
+    border: transparent;
+    border-radius: 8px;
     padding: 8px;
     text-align: center;
     margin: auto;
+    width: 120px;
     color: white;
 }
 
@@ -121,11 +123,30 @@ ul {
 .prompt {
     background-color: #3882f6;
     border-radius: 4px;
+    display: flex;
+    justify-content: space-evenly;
+    color: #e5e7eb;
+    width: 100%;
+    max-width: 900px; 
+    padding: 40px;
+    box-sizing: border-box; 
 }
 
 .lower-content {
-    border: 2px solid blueviolet;
-    padding: 48px;
+    padding: 80px 40px;
+    display: flex;
+    justify-content: center;
+}
+
+#prompt-button {
+    border: 1px solid white;
+}
+
+
+.right-prompt {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .footer {
